log
Wed 08 May 2024 02:06:01 PM UTC: 
 tests:  1|8
total_score: 0/70
5aec8e5
Wed 08 May 2024 02:10:41 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
40e4558
Wed 08 May 2024 02:17:39 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
3bbd506
Wed 08 May 2024 02:31:36 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  4|7
total_score: 5/70
37e6c52
Wed 08 May 2024 02:39:07 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
66bd0f2
Wed 08 May 2024 02:41:26 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c90d140
